objects/Lots__c.object
<CustomObject>
    <description>1. Lots are unqualified properties.1to1 relationships with leads &amp; accounts/properties. Relationships are assigned when addresses &amp; names (for now) match across objects. More relationships=less integrity. Make rules to search,destroy less important,more egregious duplicates in Leads,Accounts. a lot can target mapsAPI  if its identity is removed to find the real one. Point right now is to count / manage entry error on either side of conversion, 

2. Lots use maps-hosted data.
Original Lots w/ 1to1Lead w/ lead get to take some data back. Generic fields for different objects/recordtypes. makes the jump between the lead and property objects maneuverable.
A llot record that is created or updated will kick a post to the mapsAPI, store the geoId response, Post another request w/ body from related record fields, to the appropriate destination given type (attom-01 &lt;= residential, usBizinfo &lt;= commercial)
3. Vacant Lots - (upon vacancy, do post,post evaluate, if it fails, probably delete)</description>
    <fields>
        <fullName>Area_Living_Space__c</fullName>
        <description>SQUARE FOOTAGE</description>
        <inlineHelpText>SQUARE FOOTAGE. USE SQUARE FEET. USE SQUARE FEET. USE SQ FT IF YOU CHANGE IT. USE SQUARE FEET IF YOU MAKE ANY CHANGES HERE!!</inlineHelpText>
        <label>Area of Total Living Space</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Equity__c</fullName>
        <label>Available Equity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buildings__c</fullName>
        <label>Buildings</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <label>Construction Type</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooling_Type__c</fullName>
        <label>Cooling Type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_Last_Sale_Date__c</fullName>
        <label>Deed Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exterior_Material__c</fullName>
        <label>Exterior Material</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Type__c</fullName>
        <description>First Position Mortgage Type</description>
        <label>First Mortgage Type</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Owner_Type__c</fullName>
        <description>Description for owner 1</description>
        <label>First Owner Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Type__c</fullName>
        <label>Foundation Type</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName1__c</fullName>
        <label>Full Name 1</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName2__c</fullName>
        <label>Full Name 2</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Id__c</fullName>
        <label>Geographical_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Area_All_Structures__c</fullName>
        <description>Counts the additional stuff like garage, porch, plus any outbuildings, nonprimary residences. I don&apos;t know if it&apos;s using footprint area or adding the sums of each building&apos;s total floor area. Figure that out soon.</description>
        <inlineHelpText>Counts the additional stuff like garage, porch, plus any outbuildings, nonprimary residences.</inlineHelpText>
        <label>Gross Area of All Structures</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heating_Fuel_Type__c</fullName>
        <label>Heating Fuel Type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heating_Type__c</fullName>
        <label>Heating Type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <description>Loan-to-Value Ratio</description>
        <label>LTV</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lastname_1__c</fullName>
        <label>Lastname 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname_2__c</fullName>
        <label>Lastname 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead is a temporary parent. maybe permanent. I don&apos;t know.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Area__c</fullName>
        <description>Don&apos;t be an idiot. It&apos;s still square feet.</description>
        <label>Lot Area</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Value_Improvements__c</fullName>
        <label>Market Value Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Value_Land__c</fullName>
        <label>Market Value Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Value_Total__c</fullName>
        <label>Market Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <label>Parcel Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Assessed_Value__c</fullName>
        <label>Previous Assessed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Lots__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related through last name or phone</description>
        <label>Related Lots</label>
        <referenceTo>maps__Layer__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <label>Roof Material</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Mortgage_Type__c</fullName>
        <description>Second Position Mortgage Type</description>
        <label>Second Mortgage Type</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Owner_Type__c</fullName>
        <description>Brief, standard description for Owner 2</description>
        <label>Second Owner Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stories__c</fullName>
        <label>Stories</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_Style_Type__c</fullName>
        <description>returns stuff like: FRAME, RANCH, NONE STATED, etc.</description>
        <label>Structure Style Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Assessed_Value_Improvements__c</fullName>
        <label>Tax Assessed Value Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Assessed_Value_Land__c</fullName>
        <label>Tax Assessed Value Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Assessed_Value_Total__c</fullName>
        <label>Tax Assessed Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rooms__c</fullName>
        <label>Total Rooms</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>celat__c</fullName>
        <label>celat</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>celng__c</fullName>
        <label>celng</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nelat__c</fullName>
        <description>Latitude of Northeastern Vertex</description>
        <label>nelat</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nelng__c</fullName>
        <description>Longitude of Northeastern vertex</description>
        <label>nelng</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>swlat__c</fullName>
        <description>Latitude of Southwestern vertex</description>
        <label>swlat</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>swlng__c</fullName>
        <description>Longitude of southwestern vertex</description>
        <label>swlng</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>Lot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>PostalCode__c</columns>
        <columns>City__c</columns>
        <columns>Year_Built__c</columns>
        <columns>Lot_Area__c</columns>
        <columns>Tax_Assessed_Value_Total__c</columns>
        <columns>Bathrooms__c</columns>
        <columns>Bedrooms__c</columns>
        <columns>Total_Rooms__c</columns>
        <columns>celat__c</columns>
        <columns>celng__c</columns>
        <columns>FullName1__c</columns>
        <columns>Construction_Type__c</columns>
        <columns>FullName2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>